# cync-lan

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTES.md  README.md  create_certs.sh  cync_mesh_example.yaml  docker-compose.yaml  pyproject.toml  repository.yaml  setup.cfg
.github/workflows/: container-package-publish.yml  docker-publish.yml  dockerhub-publish.yml  stale.yaml
addons/: addons.md
addons/cync_lan/: Dockerfile  config.yaml  run.sh
docker/: Dockerfile  docker-compose.yaml  example.env
docs/: CONTROL.md  DNS.md  Debugging_Setup.md  INSTALL.md  Packet Structure.md  STATUS.md  command_line_sub_commands.md  cync-lan sub-commands.md  firmware_version.md  install.md  known_devices.md  off on.md  packet_structure.md  trouble_shooting.md  troubleshooting.md
docs/3 devices/Plug - Toggle Power/: Bulb.md  Plug.md
src/: create_certs.py  cync-lan.py
src/cync_lan/: __init__.py  cloud_api.py  const.py  consts.py  devices.py  exporter.py  main.py  mqtt_client.py  server.py  structs.py  utils.py
src/cync_lan/metadata/: model_info.py
src/cync_lan/packet/: __init__.py  builder.py  codec.py  parser.py  types.py
tests/: test_model_info.py  test_packet_builder.py  test_packet_parser.py
