[metadata]
name = cync_lan
version = 0.0.3
author = baudneo
author_email = 86508179+baudneo@users.noreply.github.com
description = Local control of Cync devices, integrate with Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baudneo/cync-lan
project_urls =
    Bug Tracker = https://github.com/baudneo/cync-lan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
;packages =
;    cync_lan
python_requires = >=3.7
scripts =
    src/cync-lan.py
install_requires =
    pyyaml>6.0
    uvloop
    requests

[options.packages.find]
where = src
